--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.12.17, 2.13.8]
+        scala: [2.12.17, 2.13.8, 3.2.0]
         java: [temurin@11]
     runs-on: ${{ matrix.os }}
     steps:
@@ -123,6 +123,16 @@ jobs:
           name: target-${{ matrix.os }}-2.13.8-${{ matrix.java }}
 
       - name: Inflate target directories (2.13.8)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (3.2.0)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-3.2.0-${{ matrix.java }}
+
+      - name: Inflate target directories (3.2.0)
         run: |
           tar xf targets.tar
           rm targets.tar
